--- a/index.html
+++ b/index.html
@@ -4,41 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>فضاء الكشافة التونسية - جهة المهدية</title>
+
+    <!-- Tailwind CDN (OK) -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
-              sans: ['Tajawal', 'sans-serif'],
+              sans: ["Tajawal", "sans-serif"],
             },
             colors: {
               scout: {
-                red: '#c8102e', // Tunisian flag red
-                dark: '#8a0b20',
-                bg: '#f8fafc',
-              }
-            }
-          }
+                red: "#c8102e",
+                dark: "#8a0b20",
+                bg: "#f8fafc",
+              },
+            },
+          },
+        },
+      };
+    </script>
+
+    <!-- IMPORTMAPS (OK) -->
+    <script type="importmap">
+      {
+        "imports": {
+          "react/": "https://aistudiocdn.com/react@^19.2.0/",
+          "react": "https://aistudiocdn.com/react@^19.2.0",
+          "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+          "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
+          "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
         }
       }
     </script>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
+  </head>
+
   <body class="bg-scout-bg font-sans text-slate-800">
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+
+    <!-- IMPORTANT: VITE ENTRY (NO LEADING /) -->
+    <script type="module" src="src/index.tsx"></script>
+  </body>
 </html>
